@@ -23,8 +23,8 @@
 #define CL_USE_DEPRECATED_OPENCL_1_2_APIS // to disable deprecation warnings
 
 // Includes the C++ OpenCL API. If not yet available, it can be found here:
-// https://www.khronos.org/registry/cl/api/1.1/cl.hpp
-#include "cl.hpp"
+// https://raw.githubusercontent.com/KhronosGroup/OpenCL-CLHPP/main/include/CL/opencl.hpp
+#include "opencl.hpp"
 
 // Includes the CLBlast library
 #include <clblast.h>
