@@ -2,6 +2,7 @@ Version 1.5.3
 - Fix a correctness issue with DGEMM on SM 7.5 Turing GPUs
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see doc/tuning.md)
+- Update cl.hpp to the new opencl.hpp header in the samples
 - Changed the complex sum routine to return the complex sum instead of the absolute complex sum.
 
 Version 1.5.2
